--- a/viagem-roteiro-europa.html
+++ b/viagem-roteiro-europa.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Checklist de Viagem</title>
+    <title>Checklist de Viagem Europa</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         body {
@@ -286,3 +286,4 @@
 
 </body>
 </html>
+
