--- a/viagem-roteiro-europa.html
+++ b/viagem-roteiro-europa.html
@@ -12,12 +12,16 @@
             background-color: #f3f4f6;
             color: #1f2937;
         }
-        /* Style for the selected gender option */
+        /* Estilo para a opção de gênero selecionada */
         input[type="radio"]:checked + div {
             background-color: #dbeafe; /* bg-blue-100 */
             color: #1e40af; /* text-blue-800 */
             font-weight: bold;
             border: 2px solid #3b82f6; /* border-blue-500 */
+        }
+        /* Garante que os checkboxes tenham tamanho consistente */
+        input[type="checkbox"] {
+            flex-shrink: 0;
         }
     </style>
 </head>
@@ -49,7 +53,7 @@
         </div>
         
         <div id="checklist-container">
-            <!-- Items will be generated here by JavaScript -->
+            <!-- Os itens serão gerados aqui por JavaScript -->
         </div>
 
         <div id="status" class="text-center mt-8 text-sm text-gray-500"></div>
@@ -256,7 +260,8 @@
                     const checkbox = document.createElement('input');
                     checkbox.type = 'checkbox';
                     checkbox.id = generateUniqueId(categoryData.category, itemData);
-                    checkbox.className = 'form-checkbox h-5 w-5 text-blue-600 rounded-full cursor-pointer transition duration-150 ease-in-out';
+                    // Adicionado flex-shrink-0 para manter o tamanho fixo
+                    checkbox.className = 'form-checkbox h-5 w-5 text-blue-600 rounded-md cursor-pointer transition duration-150 ease-in-out flex-shrink-0';
                     
                     const label = document.createElement('label');
                     label.htmlFor = checkbox.id;
